TP8-Tavarifun/tests/bad/ref/t00.ml
let a : int ref = ref 1 ;;
print_int a ;;
